# sprout

./: .env  .gitignore  Cargo.toml  README.md  agent.env  package.json  script.sh
.github/workflows/: release.yml
.pupup/: config.json
agent/: Cargo.toml  README.md  涉枪涉爆违法信息关键词.txt
agent/src/: app.rs  config.rs  error.rs  helper.rs  main.rs  response.rs  rpc.rs  traits.rs
agent/src/components/: mod.rs
agent/src/components/deployment/: handler.rs  mod.rs  model.rs  service.rs
agent/src/components/heartbeat/: handler.rs  mod.rs  service.rs
agent/src/components/nginx/: mod.rs
agent/src/helpers/: audit_file.rs  domian.rs  mod.rs  nginx.rs
cli/: Cargo.toml
cli/assets/: 否定关键词.txt  涉枪涉爆违法信息关键词.txt  色情类.txt
cli/src/: error.rs  helper.rs  main.rs  rpc.rs
cli/src/commands/: deploy.rs  list.rs  login.rs  mod.rs  signup.rs
common/: Cargo.toml
common/src/: agent.rs  lib.rs  master.rs
entity/: Cargo.toml
entity/src/: agent.rs  deployment.rs  lib.rs  prelude.rs  site.rs  user.rs
master/: Cargo.toml  README.md
master/src/: app.rs  cloudflare.rs  config.rs  error.rs  helper.rs  main.rs  middlewares.rs  response.rs  rpc.rs  timing.rs  traits.rs
master/src/components/: mod.rs
master/src/components/agent/: handler.rs  mod.rs  model.rs  service.rs
master/src/components/base/: mod.rs
master/src/components/deployment/: handler.rs  mod.rs  model.rs  service.rs
master/src/components/project/: handler.rs
master/src/components/site/: handler.rs  mod.rs  model.rs  service.rs
master/src/components/user/: handler.rs  mod.rs  model.rs  service.rs
master/src/deployment/: build.rs
master/src/entities/: agent.rs  deployment.rs  mod.rs  user.rs
master/src/entitys/: agent.rs  deployment.rs  mod.rs  nginx.rs  prelude.rs  project.rs  server.rs  site.rs  user.rs
master/src/helpers/: mod.rs
master/src/middleware/: auth.rs
master/src/repository/: agent.rs  deployment.rs  mod.rs  site.rs  user.rs
migration/: Cargo.toml
migration/src/: create_table_agent.rs  create_table_deployment.rs  create_table_nginx.rs  create_table_project.rs  create_table_server.rs  create_table_site copy.rs  create_table_site.rs  create_table_user.rs  lib.rs
npm/: index.js  package.json  pupup-0.0.1.tgz
rpc/: Cargo.toml
rpc/src/: agent.rs  error.rs  lib.rs  master.rs
