[workspace]
members = ["master", "agent", "cli", "migration", "entity", "rpc"]

[workspace.dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
rpc = { path = "./rpc" }
actix-cors = "0.7.1"
actix-web = { version = "4.10.1", features = ["rustls"] }
actix-web-httpauth = "0.8.2"
actix-multipart = "0.7.2"
aho-corasick = "1.1.3"
rand = "0.9.0"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = "1.0.204"
serde_json = "1.0.115"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sea-orm = { version = "1.1.8", features = ["runtime-tokio-rustls"] }
helpers = "0.6.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
] }
sysinfo = "0.34.2"
mockall = "0.13.1"
cloudflare = "0.14.0"
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.44.2" }
