[workspace]
members = ["master", "agent", "cli", "migration", "entity", "rpc"]

[workspace.package]
version = "0.0.1"
authors = ["JQiue"]
edition = "2024"
publish = false

[workspace.dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
rpc = { path = "./rpc" }
actix-cors = "0.7.1"
actix-web = { version = "4.10.1" }
actix-web-httpauth = "0.8.2"
actix-multipart = "0.7.2"
aho-corasick = "1.1.3"
rand = "0.9.0"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = "1.0.204"
serde_json = "1.0.115"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sea-orm = "1.1.8"
helpers = "0.6.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
sysinfo = "0.34.2"
mockall = "0.13.1"
cloudflare = { git = "https://github.com/JQiue/cloudflare-rs", branch = "feat/async_client", default-features = false, features = [
  "rustls-tls",
] }
log = "0.4.27"
env_logger = "0.11.8"
tokio = "1.44.2"

[profile.dev]
RUST_LOG = "trace"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = false
strip = true
