[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc = { workspace = true }
actix-web = { workspace = true, features = ["rustls"] }
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
helpers = { workspace = true, features = ["jwt"] }
dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "local-time",
] }
sysinfo = { workspace = true }


[dev-dependencies]
mockall = { workspace = true }
