[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rpc = { workspace = true }
aho-corasick = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
helpers = { workspace = true, features = ["jwt", "rand"] }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.5.35", features = ["derive"] }
indicatif = "0.17.11"
console = { version = "0.15.11", default-features = false, features = [
  "ansi-parsing",
] }
tar = "0.4.44"
rust-embed = "8.6.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
