[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
validator = { workspace = true, features = ["derive"] }
entity = { workspace = true }
