[package]
name = "master"
version = "0.1.0"
edition = "2024"

[dependencies]
helpers = { workspace = true, features = ["jwt", "hash", "uuid", "time"] }
actix-cors = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
aho-corasick = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bcrypt = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
reqwest = { workspace = true, features = ["json"] }
cloudflare = { workspace = true }
tokio = { version = "1.44.1", features = ["full"] }
