[package]
name = "master"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { workspace = true }
migration = { workspace = true }
rpc = { workspace = true }
helpers = { workspace = true, features = ["jwt", "hash", "uuid", "time"] }
actix-cors = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
aho-corasick = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "local-time",
] }
sea-orm = { workspace = true, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
] }
cloudflare = { workspace = true }
tokio = { workspace = true, features = ["full"] }
