[package]
name = "master"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
entity = { workspace = true }
migration = { workspace = true }
rpc = { workspace = true }
helpers = { workspace = true, features = ["jwt", "hash", "uuid", "time"] }
actix-cors = { workspace = true }
actix-web = { workspace = true, features = ["rustls"] }
actix-web-httpauth = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "local-time",
] }
sea-orm = { workspace = true, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
] }
cloudflare = { workspace = true, default-features = false, features = [
  "rustls-tls",
] }
tokio = { workspace = true, features = ["full"] }
