
[package]
name = "rpc"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
