
[package]
name = "rpc"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
common = { workspace = true }
entity = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
cloudflare = { workspace = true, default-features = false, features = [
  "rustls-tls",
] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
